# fil

./: .gitignore  404.html  README.md  fil.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.sh  test_fil.py
.github/workflows/: python-package.yml
docs/: index.md
fil/: __init__.py
