[project]
name = "fil"
version = "1.4.3"
description = "ðŸº Read/write JSON/TOML/Yaml/txt ðŸº"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "safer",
    "types-ujson",
]

[project.urls]
Homepage = "https://github.com/rec/fil"
Repository = "https://github.com/rec/fil"
Documentation = "https://rec.github.io/fil"

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pyyaml",
    "ruff",
    "tdir",
    "tomlkit",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]

[tool.coverage.run]
branch = true
source = ["fil"]

[tool.coverage.report]
fail_under = 87
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if False:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
